feat(tests): unique_and_concurrency test

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,8 @@
 MYSQL_USERNAME=test
 MYSQL_PASSWORD=test
-MYSQL_HOST=mysql_test
+MYSQL_HOST=localhost
 MYSQL_DBNAME=test
-MYSQL_PORT=3306
+MYSQL_PORT=33066
+
+REDIS_HOST=localhost
+REDIS_PORT=63799
