--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,12 @@ aiomysql = "^0.2.0"
 greenlet = "^3.0.1"
 fastapi = "^0.104.1"
 redis = "^5.0.1"
+redlock-py = "^1.0.8"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
-pytest-asyncio = "^0.23.2"
+pytest-asyncio = "^0.21"
 asgi-lifespan = "^2.1.0"
 httpx = "^0.25.2"
 
